<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Multiplayer Pong</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="sign_in_fallback_error">There was an issue with signing in to the Google servers. Please try again later.</string>
    <string name="sign_in_failed">Sign in failed. Please try again.</string>
    <string name="already_signed_out">You are already signed out.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_quick_game">Quick Game</string>
    <string name="btn_invite_players">Invite Players</string>
    <string name="btn_view_invitations">View Invitations</string>
    <string name="btn_achievements">Achievements</string>
    <string name="btn_leaderboards">Leaderboards</string>
    <string name="invitation_dialog_title">New Game Invitation!</string>
    <string name="invitation_dialog_message">You have received a new game invitation.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="versus">vs</string>
    <string name="score">Score:</string>
    <string name="initial_score">0</string>
    <string name="score_separator">-</string>
    <string name="player_name_placeholder">PLAYER NAME</string>
    <string name="an_error_occurred">Notice</string>
    <string name="error_opponent_left">Your opponent has left the room.</string>
    <string name="error_app_version">Your are using an out-dated version of this application. The application might behave in unexpected ways. Please update the app before continuing.</string>
    <string name="version_check_dialog_title">Checking App Version</string>
    <string name="version_check_dialog_message">Please wait ...</string>
    <string name="no_internet_connection">You are not connected to the internet</string>
</resources>
