<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mathiasbrandt.android.multiplayerpong.MainMenuFragment">

    <!-- top -->
    <RelativeLayout
        android:id="@+id/top_container"
        android:layout_width="match_parent"
        android:layout_height="150dp">

        <ImageView
            android:id="@+id/img_banner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#669900"/>

        <ImageView
            android:id="@+id/img_player_picture"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="25dp"
            android:background="#669900"
            android:src="@drawable/player_icon"/>

        <TextView
            android:id="@+id/tv_player_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="FIRSTNAME LASTNAME"
            android:layout_alignTop="@id/img_player_picture"
            android:layout_toRightOf="@id/img_player_picture"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:textColor="@android:color/white"
            android:textAllCaps="true"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tv_player_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/tv_player_name"
            android:layout_below="@id/tv_player_name"
            android:text="TITLE"
            android:layout_marginTop="10dp"
            android:textColor="@android:color/white"
            android:textAllCaps="true"
            android:textStyle="bold|italic"/>

        <TextView
            android:id="@+id/tv_player_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="SCORE: XX PTS."
            android:layout_alignLeft="@id/tv_player_title"
            android:layout_below="@id/tv_player_title"
            android:layout_marginTop="10dp"
            android:textColor="@android:color/white"
            android:textAllCaps="true"
            android:textStyle="bold"/>
    </RelativeLayout>
    <!-- /top -->

    <!-- bottom -->
    <RelativeLayout
        android:id="@+id/bottom_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/top_container"
        android:background="#ffffff">

        <LinearLayout
            android:id="@+id/game_buttons_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp">

            <Button
                android:id="@+id/btn_quick_game"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:text="@string/btn_quick_game"/>

            <Button
                android:id="@+id/btn_invite_players"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:text="@string/btn_invite_players"/>

            <Button
                android:id="@+id/btn_view_invitations"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:text="@string/btn_view_invitations"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/extra_buttons_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@id/game_buttons_container"
            android:layout_alignLeft="@id/game_buttons_container"
            android:layout_marginTop="50dp">

            <Button
                android:id="@+id/btn_achievements"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:text="@string/btn_achievements"/>

            <Button
                android:id="@+id/btn_leaderboards"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:text="@string/btn_leaderboards"/>
            </LinearLayout>



        <com.google.android.gms.common.SignInButton
            android:id="@+id/btn_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:visibility="invisible"/>
        
        <Button
            android:id="@+id/btn_sign_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:text="G+ SIGN OUT"
            android:background="#FF4444"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:visibility="invisible"/>
    </RelativeLayout>
    <!-- /bottom -->

</RelativeLayout>
